// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order controls Check right react components order should render correct imperative order 1`] = `
Array [
  "YMapControlButton:<",
  "YMapControl",
  "YMapControlCommonButton:<",
  "YMapControlButton:top",
  "YMapControl",
  "YMapControlCommonButton:top",
  "YMapControlButton:#foo",
  "YMapControl",
  "YMapControlCommonButton:#foo",
  "YMapControlButton:#bar",
  "YMapControl",
  "YMapControlCommonButton:#bar",
  "YMapControlButton:#qux",
  "YMapControl",
  "YMapControlCommonButton:#qux",
  "YMapControl",
  "YMapReactContainerEntity",
  "YMapControlButton:kek",
  "YMapControl",
  "YMapControlCommonButton:kek",
  "YMapControlButton:@god",
  "YMapControl",
  "YMapControlCommonButton:@god",
  "YMapControlButton:@999",
  "YMapControl",
  "YMapControlCommonButton:@999",
  "YMapControlButtonCounter:2",
  "YMapControl",
  "YMapControlCommonButton:2",
  "YMapControlButton:>",
  "YMapControl",
  "YMapControlCommonButton:>",
  "YMapZoomControl",
  "YMapControlCommonButton",
  "YMapIcon",
  "YMapControlCommonButton",
  "YMapIcon",
  "YMapListener",
  "YMapGeolocationControl",
  "YMapControl",
  "YMapControlCommonButton",
  "YMapIcon",
]
`;

exports[`Order controls Check right react components order should render correct imperative order 2`] = `
Array [
  "YMapControlButton:<",
  "YMapControl",
  "YMapControlCommonButton:<",
  "YMapControlButton:#foo",
  "YMapControl",
  "YMapControlCommonButton:#foo",
  "YMapControlButton:#bar",
  "YMapControl",
  "YMapControlCommonButton:#bar",
  "YMapControlButton:#qux",
  "YMapControl",
  "YMapControlCommonButton:#qux",
  "YMapControl",
  "YMapReactContainerEntity",
  "YMapControlButton:kek",
  "YMapControl",
  "YMapControlCommonButton:kek",
  "YMapControlButton:@god",
  "YMapControl",
  "YMapControlCommonButton:@god",
  "YMapControlButton:@999",
  "YMapControl",
  "YMapControlCommonButton:@999",
  "YMapControlButtonCounter:4",
  "YMapControl",
  "YMapControlCommonButton:4",
  "YMapControlButton:top",
  "YMapControl",
  "YMapControlCommonButton:top",
  "YMapControlButton:>",
  "YMapControl",
  "YMapControlCommonButton:>",
  "YMapZoomControl",
  "YMapControlCommonButton",
  "YMapIcon",
  "YMapControlCommonButton",
  "YMapIcon",
  "YMapListener",
  "YMapGeolocationControl",
  "YMapControl",
  "YMapControlCommonButton",
  "YMapIcon",
]
`;

exports[`Order controls Check right react components order should render correct react order 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "tagName": "ymaps",
                },
              ],
              "class": "ymaps3x0--main-engine-container",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "tagName": "ymaps",
                },
              ],
              "class": "ymaps3x0--top-engine-container",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--map-copyrights__text",
                      "tagName": "span",
                    },
                    Object {
                      "class": "ymaps3x0--map-copyrights__user-agreements",
                      "tagName": "a",
                      "target": "_blank",
                    },
                  ],
                  "class": "ymaps3x0--map-copyrights__container",
                  "tagName": "div",
                },
                Object {
                  "style": "width: 46px; height: 20px;",
                  "tagName": "span",
                },
              ],
              "tagName": "div",
            },
          ],
          "class": "ymaps3x0--map",
          "tagName": "ymaps",
        },
        Object {
          "children": Array [
            Object {
              "class": "ymaps3x0--controls-placeholder",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "<",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "top",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#foo",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#bar",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#qux",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        "react! ",
                        "2",
                      ],
                      "style": "display: block; background: white; border-radius: 8px; padding: 8px; border: 0px;",
                      "tagName": "button",
                    },
                  ],
                  "tagName": "div",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "kek",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "@god",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "@999",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "2",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    ">",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-zoom-in",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button ymaps3x0--zoom-control-in",
                  "tagName": "button",
                },
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-zoom-out",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button ymaps3x0--zoom-control-out",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-geolocation",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "class": "ymaps3x0--controls-placeholder",
              "tagName": "ymaps",
            },
          ],
          "class": "ymaps3x0--controls ymaps3x0--top-left-controls ymaps3x0--horizontal-controls",
          "tagName": "ymaps",
        },
      ],
      "class": "ymaps3x0--map-container",
      "tagName": "ymaps",
    },
  ],
  "style": "width: 100%; height: 100%; margin: 0px; padding: 0px; display: block;",
  "tagName": "ymaps",
}
`;

exports[`Order controls Check right react components order should render correct react order 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "tagName": "ymaps",
                },
              ],
              "class": "ymaps3x0--main-engine-container",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "tagName": "ymaps",
                },
              ],
              "class": "ymaps3x0--top-engine-container",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--map-copyrights__text",
                      "tagName": "span",
                    },
                    Object {
                      "class": "ymaps3x0--map-copyrights__user-agreements",
                      "tagName": "a",
                      "target": "_blank",
                    },
                  ],
                  "class": "ymaps3x0--map-copyrights__container",
                  "tagName": "div",
                },
                Object {
                  "style": "width: 46px; height: 20px;",
                  "tagName": "span",
                },
              ],
              "tagName": "div",
            },
          ],
          "class": "ymaps3x0--map",
          "tagName": "ymaps",
        },
        Object {
          "children": Array [
            Object {
              "class": "ymaps3x0--controls-placeholder",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "<",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#foo",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#bar",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "#qux",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        "react! ",
                        "4",
                      ],
                      "style": "display: block; background: white; border-radius: 8px; padding: 8px; border: 0px;",
                      "tagName": "button",
                    },
                  ],
                  "tagName": "div",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "kek",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "@god",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "@999",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "4",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "top",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    ">",
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-zoom-in",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button ymaps3x0--zoom-control-in",
                  "tagName": "button",
                },
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-zoom-out",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button ymaps3x0--zoom-control-out",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "class": "ymaps3x0--icon ymaps3x0--icon-geolocation",
                      "style": "width: 24px; height: 24px;",
                      "tagName": "span",
                    },
                  ],
                  "class": "ymaps3x0--button ymaps3x0--control-button",
                  "tagName": "button",
                },
              ],
              "class": "ymaps3x0--control",
              "tagName": "ymaps",
            },
            Object {
              "class": "ymaps3x0--controls-placeholder",
              "tagName": "ymaps",
            },
          ],
          "class": "ymaps3x0--controls ymaps3x0--top-left-controls ymaps3x0--horizontal-controls",
          "tagName": "ymaps",
        },
      ],
      "class": "ymaps3x0--map-container",
      "tagName": "ymaps",
    },
  ],
  "style": "width: 100%; height: 100%; margin: 0px; padding: 0px; display: block;",
  "tagName": "ymaps",
}
`;
